<resources>
    <string name="app_name">OCR</string>
    <string name="message">Tap to start voice assistant</string>
    <string name="ImageButton">Take a picture!</string>
    <string name="TextToSpeech">Text to speech</string>
    <string name="QuestionAndAnswer">Question and answer</string>
    <string name="Summarize">Summarize</string>
    <string name="Save">Save</string>
    <string name="button1">Camera</string>
    <string name="button2">Gallery</string>
    <string name="button3">Saved Images</string>
    <string name="TextEmptyMessage">No text detected.</string>
    <string name="OCR_Title">Text</string>
    <string name="OCR_title_summary">Summary</string>
    <string name="OCR_title_text">Text</string>
    <string name="save_to_device">Save to device</string>
    <string name="save_to_cloud">Save to cloud</string>
    <string name="AddTag" />
    <string name="add_chip">ADD</string>
    <string name="AddDone">add_done</string>
    <string name="image_tags">Tags</string>
    <string name="Add">add</string>
    <string name="save_image_to_device">Save image to device</string>
    <string name="add_tags_save">Save</string>
    <string name="add_tags_cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="tag_default_message">No tags available</string>
    <string name="display_image_content_description">Image</string>
    <string name="search_hint">Search by tag</string>
    <string name="toolbar_title">Saved Images</string>
    <string name="main_toolbar_title">TextIt</string>
    <string name="ocr_toolbar_title">Recognized Text</string>
    <string name="enter_new_tag_for_image">New tag</string>
    <string name="image_title">Image</string>
    <string name="ocr_toolbar_summary_title">Summarized Text</string>
    <string name="file_title">Recognized Text</string>
    <string name="sign_out">Sign Out</string>
    <string name="backup">Sync to cloud</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password must be at least 6 characters</string>
    <string name="auth_failed">Incorrect email or password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">New user? Register</string>
    <string name="btn_link_to_login">Registered user? Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Send email</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="forgot_password_msg">Enter your registered email id to receive password reset instructions</string>
    <string name="file_open_fail">Failed to open file.</string>
    <string name="mode_local">Local</string>
    <string name="mode_cloud">Cloud</string>

</resources>
