<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/OCR_main"
    tools:context=".ImageOCRActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="#FFFFFF" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/imageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text=""
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center|bottom"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimaryDark">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/tts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tts_round"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:contentDescription="@string/TextToSpeech"
                android:layout_margin="10dp"
                app:maxImageSize="60dp"
                app:backgroundTint="@android:color/transparent"
                app:tint="@null"
                android:onClick="TTS"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/summarize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/summarize_round"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:contentDescription="@string/Summarize"
                android:layout_margin="10dp"
                app:maxImageSize="60dp"
                app:backgroundTint="@android:color/transparent"
                app:tint="@null"
                android:onClick="summarize"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/save_round"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:contentDescription="@string/Save"
                android:layout_margin="10dp"
                app:maxImageSize="60dp"
                app:backgroundTint="@android:color/transparent"
                app:tint="@null"
                android:onClick="save"/>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>

